# car-wash-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  car_wash.json  manage.py  pyproject.toml  setup.cfg
.github/workflows/: deploy_workflow.yml  workflow.yml
api/carwash/: constants.py  filters.py  serializers.py  tests.py  urls.py  utils.py  views.py
api/tests/: test.py  test_serializers.py  test_views.py
api/users/: serializers.py  urls.py  views.py
car_wash_backend/: asgi.py  settings.py  urls.py  wsgi.py
carwash/: admin.py  models.py
carwash/migrations/: 0001_initial.py  0002_alter_carwashmodel_coordinates.py  0003_alter_carwashmodel_coordinates.py  0004_alter_carwashtypemodel_name.py  0005_carwashimagemodel_carwashservicesmodel_and_more.py  0006_alter_carwashservicesmodel_options_and_more.py  0007_carwashratingmodel_and_more.py  0008_alter_carwashratingmodel_options_and_more.py  0009_alter_nearestmetrostationmodel_distance_and_more.py  0010_alter_carwashratingmodel_carwash_and_more.py  0011_alter_carwashmodel_latitude_and_more.py  0012_alter_carwashmodel_latitude_and_more.py  0013_delete_promotionsmodel.py  (+7 more)
contacts/: admin.py  models.py
core/: constants.py
data/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  5.json  6.json  7.json  8.json  (+4 more)
infra/: Dockerfile
promotions/: admin.py  models.py
schedule/: admin.py  models.py
services/: admin.py  models.py
users/: models.py
(+34 files in other folders)
