[tool.poetry]
name = "car-wash-backend"
version = "0.1.0"
description = ""
authors = ["PavelPrist <umcperovo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
