[tool.poetry]
name = "car-wash-backend"
version = "0.1.0"
description = ""
authors = ["PavelPrist <umcperovo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
pre-commit = "^3.5.0"
drf-spectacular = "^0.26.5"
djangorestframework = "^3.14.0"
django-filter = "^23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
